@@ -7,19 +7,12 @@ from txlb import model
 from txlb import manager
 from txlb.application import service as txervice
 
-# perhaps the schedulers *should* have the list of hosts, since they may need
-# to know which ones are prefered for weighting... so maybe host information
-# should have the following attributes encoded:
-#   * hostname/ip
-#   * port
-#   * weighting
-#   * filetype (file types that the host accepts, determined by extension)
-#   * protocol (protocols that the host accepts, determined by URL scheme, if
-#              applicable)
 
-proxyServices =[
+servicePort = 8080
+
+proxyServices = [
     model.ProxyService(
-        'test proxy service', addresses=[('localhost', 8080)],
+        'test proxy service', addresses=[('localhost', servicePort)],
         groups=[
             model.ProxyGroup('test proxy group', 'leastconns', enabled=True,
                 hosts=[
@@ -30,20 +23,16 @@ proxyServices =[
         ]),
     ]
 
-pm = manager.proxyManagerFactory(proxyServices)
 
 application = service.Application('Demo Web Server')
 
-lbType = proxyServices[0].getEnabledGroup().lbType
-tracker = pm.getTracker(
-    proxyServices[0].name,
-    proxyServices[0].getEnabledGroup().name)
-lbs = txervice.LoadBalancedService(lbType, tracker)
+pm = manager.proxyManagerFactory(proxyServices)
+lbs = txervice.LoadBalancedService()
 lbs.proxiesFactory(pm)
 lbs.setServiceParent(application)
 
 site = server.Site(static.File('./data'))
-server = internet.TCPServer(8080, site)
+server = internet.TCPServer(servicePort, site)
 
 # non-load-balanced, we do the following
 lbs.setPrimaryService(server)
